# 4D-Objects-Visualization

./: CMakeLists.txt
Project4D/: CMakeLists.txt  Project4D.cpp  Project4D.h
Project4D/src/: camera.cpp  light.cpp  light.h  model.cpp  model.h  model4D.cpp  model4D.h  renderer.cpp  renderer.h
Project4D/src/shaders/: mainShader.frag  mainShader.vert  raymarching.frag  raymarching.vert
